--- a/vsplf-dynamic-i18n-api/pom.xml
+++ b/vsplf-dynamic-i18n-api/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 /*
- * Copyright (C) 2012 VSPLF Software Foundation
+ * Copyright (C) VSPLF Software Foundation (VSF), the origin author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
