--- a/vsplf-dynamic-i18n-java/build.gradle
+++ b/vsplf-dynamic-i18n-java/build.gradle
@@ -14,6 +14,11 @@
  * limitations under the License.
  */
 
-include 'vsplf-dynamic-i18n-api'
-include 'vsplf-dynamic-i18n-gettext'
-include 'vsplf-dynamic-i18n-java'
+apply plugin: 'java'
+
+group: 'org.vsplf.vsplf-dynamic-i18n'
+version = '0.1.0-SNAPSHOT'
+
+dependencies {
+  compile project(':vsplf-dynamic-i18n-api')
+}
