--- a/vsplf-dynamic-i18n-implementation/pom.xml
+++ b/vsplf-dynamic-i18n-implementation/pom.xml
@@ -27,7 +27,9 @@
     <version>0.1.0-SNAPSHOT</version>
   </parent>
 
+  <groupId>org.vsplf.vsplf-dynamic-i18n</groupId>
   <artifactId>vsplf-dynamic-i18n-implementation</artifactId>
+  <version>0.1.0-SNAPSHOT</version>
   <name>vsplf-dynamic-i18n-implementation</name>
   <description>native implementation for vsplf-dynamic-i18n</description>
 
