--- a/vsplf-dynamic-i18n-api/pom.xml
+++ b/vsplf-dynamic-i18n-api/pom.xml
@@ -31,6 +31,12 @@
   <version>0.1.0-SNAPSHOT</version>
 
   <name>vsplf-dynamic-i18n-api</name>
-  <description>Java APIs and implementation for vsplf-dynamic-i18n</description>
+  <description>Java APIs for vsplf-dynamic-i18n</description>
+  <url>http://vsplf.github.com/vsplf-dynamic-i18n/latest/vsplf-dynamic-i18n-api</url>
+
+  <issueManagement>
+    <system>github</system>
+    <url>https://github.com/vsplf/vsplf-dynamic-i18n/issues?labels=api&amp;sort=created&amp;direction=desc&amp;state=open&amp;page=1</url>
+  </issueManagement>
 
 </project>
